src/snapshots/transmute__parser__tests__err_let_fn_eof_in_params.snap
---
source: src/parser.rs
expression: "(&ast, &diagnostics)"
---
(
    Ast {
        identifiers: [
            "x",
        ],
        identifier_refs: [],
        expressions: [],
        statements: [],
        root: [],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `eof`, expected one of identifier, `)`",
                span: 1:7; [6, 6],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    443,
                ),
            },
        ],
    },
)
