src/snapshots/transmute__parser__tests__err_let_fn_missing_equal.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"let x() { }\")).parse()"
---
(
    Ast {
        identifiers: [
            "x",
        ],
        identifier_refs: [],
        expressions: [
            Expression {
                id: ExprId {
                    id: 0,
                },
                kind: Block(
                    [],
                ),
                span: 1:9; [8, 11],
            },
        ],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: LetFn(
                    Identifier {
                        id: IdentId {
                            id: 0,
                        },
                        span: 1:5; [4, 5],
                    },
                    [],
                    None,
                    ExprId {
                        id: 0,
                    },
                ),
                span: 1:1; [0, 11],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Expected `=`, got `{`",
                span: 1:9; [8, 9],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    478,
                ),
            },
        ],
    },
)
