src/snapshots/transmute__parser__tests__err_let_fn_params_missing_colon_before_type.snap
---
source: src/parser.rs
expression: "(&ast, &diagnostics)"
---
(
    Ast {
        identifiers: [
            "f",
            "n",
            "integer",
        ],
        identifier_refs: [],
        expressions: [
            Expression {
                id: ExprId {
                    id: 0,
                },
                kind: Block(
                    [],
                ),
                span: 1:20; [19, 22],
            },
        ],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: LetFn(
                    Identifier {
                        id: IdentId {
                            id: 0,
                        },
                        span: 1:5; [4, 5],
                    },
                    [
                        Parameter {
                            identifier: Identifier {
                                id: IdentId {
                                    id: 1,
                                },
                                span: 1:7; [6, 7],
                            },
                            ty: Identifier {
                                id: IdentId {
                                    id: 2,
                                },
                                span: 1:9; [8, 15],
                            },
                            span: 1:7; [6, 15],
                        },
                    ],
                    None,
                    ExprId {
                        id: 0,
                    },
                ),
                span: 1:1; [0, 22],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Expected `:`, got identifier",
                span: 1:9; [8, 15],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    449,
                ),
            },
        ],
    },
)
