src/snapshots/transmute__parser__tests__err_let_missing_expression.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"let forty_two = ;\")).parse()"
---
(
    Ast {
        identifiers: [
            "forty_two",
        ],
        identifier_refs: [],
        expressions: [
            Expression {
                id: ExprId {
                    id: 0,
                },
                kind: Dummy,
                span: 1:17; [16, 16],
            },
        ],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Let(
                    Identifier {
                        id: IdentId {
                            id: 0,
                        },
                        span: 1:5; [4, 13],
                    },
                    ExprId {
                        id: 0,
                    },
                ),
                span: 1:1; [0, 17],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `;`, expected one of identifier, number, `true`, `false`, `if`, `while`, `(`, `-`",
                span: 1:17; [16, 17],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    647,
                ),
            },
        ],
    },
)
