src/snapshots/transmute__parser__tests__err_struct_missing_colon.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"struct MyStruct { f0 t0 }\")).parse()"
---
(
    Ast {
        identifiers: [
            "MyStruct",
            "f0",
            "t0",
        ],
        identifier_refs: [],
        expressions: [],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Struct(
                    Identifier {
                        id: IdentId {
                            id: 0,
                        },
                        span: 1:8; [7, 15],
                    },
                    [
                        Field {
                            identifier: Identifier {
                                id: IdentId {
                                    id: 1,
                                },
                                span: 1:19; [18, 20],
                            },
                            ty: Identifier {
                                id: IdentId {
                                    id: 2,
                                },
                                span: 1:22; [21, 23],
                            },
                            span: 1:19; [18, 23],
                        },
                    ],
                ),
                span: 1:1; [0, 25],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Expected `:`, got identifier",
                span: 1:22; [21, 23],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    305,
                ),
            },
        ],
    },
)
