src/snapshots/transmute__parser__tests__err_struct_missing_colon_and_type_name.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"struct MyStruct { field }\")).parse()"
---
(
    Ast {
        identifiers: [
            "MyStruct",
            "field",
        ],
        identifier_refs: [],
        expressions: [],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Struct(
                    Identifier {
                        id: IdentId {
                            id: 0,
                        },
                        span: 1:8; [7, 15],
                    },
                    [],
                ),
                span: 1:1; [0, 25],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Expected `:`, got `}`",
                span: 1:25; [24, 25],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    305,
                ),
            },
        ],
    },
)
