src/snapshots/transmute__parser__tests__err_struct_missing_comma.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"struct MyStruct { f0: t0 f1: t1 }\")).parse()"
---
(
    Ast {
        identifiers: [
            "MyStruct",
            "f0",
            "t0",
            "f1",
            "t1",
        ],
        identifier_refs: [],
        expressions: [],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Struct(
                    Identifier {
                        id: IdentId {
                            id: 0,
                        },
                        span: 1:8; [7, 15],
                    },
                    [
                        Field {
                            identifier: Identifier {
                                id: IdentId {
                                    id: 1,
                                },
                                span: 1:19; [18, 20],
                            },
                            ty: Identifier {
                                id: IdentId {
                                    id: 2,
                                },
                                span: 1:23; [22, 24],
                            },
                            span: 1:19; [18, 24],
                        },
                        Field {
                            identifier: Identifier {
                                id: IdentId {
                                    id: 3,
                                },
                                span: 1:26; [25, 27],
                            },
                            ty: Identifier {
                                id: IdentId {
                                    id: 4,
                                },
                                span: 1:30; [29, 31],
                            },
                            span: 1:26; [25, 31],
                        },
                    ],
                ),
                span: 1:1; [0, 33],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected identifier, expected one of `,`",
                span: 1:26; [25, 27],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    289,
                ),
            },
        ],
    },
)
